Update VenmoClient.java